// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.Expand childrenColumnName 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
              Lucy
            </td>
            <td
              class="rc-table-cell"
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-1"
            data-row-key="2"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-1"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jim
            </td>
            <td
              class="rc-table-cell"
            >
              1
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Expand does not crash if scroll is not set 1`] = `
<div
  class="rc-table rc-table-fixed-column rc-table-scroll-horizontal rc-table-has-fix-left"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
      style="overflow-x: auto; overflow-y: hidden;"
    >
      <table
        style="min-width: 100%; table-layout: fixed;"
      >
        <colgroup>
          <col
            class="rc-table-expand-icon-col"
          />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            />
            <th
              class="rc-table-cell"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
            <th
              class="rc-table-cell"
            >
              Gender
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            aria-hidden="true"
            class="rc-table-measure-row"
            style="height: 0px; font-size: 0;"
          >
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
            </td>
            <td
              class="rc-table-cell"
            >
              Lucy
            </td>
            <td
              class="rc-table-cell"
            >
              27
            </td>
            <td
              class="rc-table-cell"
            >
              F
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
            </td>
            <td
              class="rc-table-cell"
            >
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
            <td
              class="rc-table-cell"
            >
              M
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Expand does not crash if scroll is not set 2`] = `
<div
  class="rc-table rc-table-fixed-column rc-table-scroll-horizontal rc-table-has-fix-left"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
      style="overflow-x: auto; overflow-y: hidden;"
    >
      <table
        style="min-width: 100%; table-layout: fixed;"
      >
        <colgroup>
          <col
            class="rc-table-expand-icon-col"
          />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            />
            <th
              class="rc-table-cell"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
            <th
              class="rc-table-cell"
            >
              Gender
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            aria-hidden="true"
            class="rc-table-measure-row"
            style="height: 0px; font-size: 0;"
          >
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
            </td>
            <td
              class="rc-table-cell"
            >
              Lucy
            </td>
            <td
              class="rc-table-cell"
            >
              27
            </td>
            <td
              class="rc-table-cell"
            >
              F
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
            </td>
            <td
              class="rc-table-cell"
            >
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
            <td
              class="rc-table-cell"
            >
              M
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Expand not use nest when children is invalidate 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="2"
          >
            <td
              class="rc-table-cell"
            >
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="4"
          >
            <td
              class="rc-table-cell"
            >
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="5"
          >
            <td
              class="rc-table-cell"
            >
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Expand renders fixed column correctly work 1`] = `
<div
  class="rc-table rc-table-fixed-column rc-table-scroll-horizontal rc-table-has-fix-left rc-table-has-fix-right"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
      style="overflow-x: auto; overflow-y: hidden;"
    >
      <table
        style="width: 903px; min-width: 100%; table-layout: fixed;"
      >
        <colgroup>
          <col
            class="rc-table-expand-icon-col"
          />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left"
              style="position: sticky; left: 0px;"
            />
            <th
              class="rc-table-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
            <th
              class="rc-table-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
              style="position: sticky; right: 0px;"
            >
              Gender
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            aria-hidden="true"
            class="rc-table-measure-row"
            style="height: 0px; font-size: 0;"
          >
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left"
              style="position: sticky; left: 0px;"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
            </td>
            <td
              class="rc-table-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            >
              Lucy
            </td>
            <td
              class="rc-table-cell"
            >
              27
            </td>
            <td
              class="rc-table-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
              style="position: sticky; right: 0px;"
            >
              F
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row rc-table-expanded-row-level-1"
          >
            <td
              class="rc-table-cell"
              colspan="4"
            >
              <div
                class="rc-table-expanded-row-fixed"
                style="width: 1128px; position: sticky; left: 0px; overflow: hidden;"
              >
                <p>
                  extra data
                </p>
              </div>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left"
              style="position: sticky; left: 0px;"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
            </td>
            <td
              class="rc-table-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            >
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
            <td
              class="rc-table-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
              style="position: sticky; right: 0px;"
            >
              M
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row rc-table-expanded-row-level-1"
          >
            <td
              class="rc-table-cell"
              colspan="4"
            >
              <div
                class="rc-table-expanded-row-fixed"
                style="width: 1128px; position: sticky; left: 0px; overflow: hidden;"
              >
                <p>
                  extra data
                </p>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Expand renders tree row correctly 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
              Lucy
            </td>
            <td
              class="rc-table-cell"
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-1"
            data-row-key="2"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-1"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jim
            </td>
            <td
              class="rc-table-cell"
            >
              1
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Expand renders tree row correctly with different children 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Lucy
            </td>
            <td
              class="rc-table-cell"
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="2"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="3"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="4"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="5"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Expand work in expandable fix 1`] = `
<div
  class="rc-table rc-table-fixed-column rc-table-scroll-horizontal rc-table-has-fix-left"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
      style="overflow-x: auto; overflow-y: hidden;"
    >
      <table
        style="width: 903px; min-width: 100%; table-layout: fixed;"
      >
        <colgroup>
          <col
            class="rc-table-expand-icon-col"
          />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            />
            <th
              class="rc-table-cell"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
            <th
              class="rc-table-cell"
            >
              Gender
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            aria-hidden="true"
            class="rc-table-measure-row"
            style="height: 0px; font-size: 0;"
          >
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
            </td>
            <td
              class="rc-table-cell"
            >
              Lucy
            </td>
            <td
              class="rc-table-cell"
            >
              27
            </td>
            <td
              class="rc-table-cell"
            >
              F
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
            </td>
            <td
              class="rc-table-cell"
            >
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
            <td
              class="rc-table-cell"
            >
              M
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Expand work in expandable fix 2`] = `
<div
  class="rc-table rc-table-fixed-column rc-table-scroll-horizontal rc-table-has-fix-right"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
      style="overflow-x: auto; overflow-y: hidden;"
    >
      <table
        style="width: 903px; min-width: 100%; table-layout: fixed;"
      >
        <colgroup>
          <col />
          <col />
          <col />
          <col
            class="rc-table-expand-icon-col"
          />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
            <th
              class="rc-table-cell"
            >
              Gender
            </th>
            <th
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
              style="position: sticky; right: 0px;"
            />
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            aria-hidden="true"
            class="rc-table-measure-row"
            style="height: 0px; font-size: 0;"
          >
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class="rc-table-cell"
            >
              Lucy
            </td>
            <td
              class="rc-table-cell"
            >
              27
            </td>
            <td
              class="rc-table-cell"
            >
              F
            </td>
            <td
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
              style="position: sticky; right: 0px;"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class="rc-table-cell"
            >
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
            <td
              class="rc-table-cell"
            >
              M
            </td>
            <td
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
              style="position: sticky; right: 0px;"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
